change header name

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="scripts/app.css"/>
   </head>
   <body>
-    <header>SOLELY LOGO</header>
+    <header>SOLELY</header>
     <nav class="primary-nav">
       <section class="nav-links">
         <a class="solely-dark-link link">Soley Dark</a>
