--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta cahrset="UTF-8">
     <title>Very Solely</title>
-    <link rel="stylesheet" type="text/css" href="scripts/app.css"/>
+    <link rel="stylesheet" type="text/css" href="public/scripts/app.css"/>
   </head>
   <body>
     <header>SOLELY</header>
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <script src="scripts/jquery/jquery-1.11.2.min.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="public/scripts/jquery/jquery-1.11.2.min.js"></script>
+    <script src="public/scripts/app.js"></script>
   </body>
 </html>
